--- a/gb/news2008_3.md
+++ b/gb/news2008_3.md
@@ -1,4 +1,7 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/lduuv275/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/lduuv275/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/lduuv275/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/2/n11761930.md#1" target="_blank">英国小海豹“挥手打招呼” 萌度百分百</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/2/n11761930.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-627801334-150x120.jpg" align ="left"></a>来自瑞典、旅居马尔他的摄影师西格森（Johan Siggeson）在英国东岸拍到一只侧躺的野生小海豹，它伸出小手，仿佛在挥手打招呼，十分可爱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 1:36 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/2/n11761648.md#1" target="_blank">如何点亮你家正门</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/2/n11761648.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/door-2685019_1280-150x120.jpg" align ="left"></a>良好的户外照明不仅仅是展示您的家房子的最佳方式， 而且它确保任何来到您家的访客都可以感到安全舒适。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 10:21 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/2/n11761589.md#1" target="_blank">生活小秘诀 苹果手机空格键还可这么用</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/2/n11761589.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-158836001-150x120.jpg" align ="left"></a>只要按住苹果手机空格键（space bar），就可以将光标精确地移到想要去的位置。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 10:14 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/2/n11761626.md#1" target="_blank">家里装修期间如何“战地求生”？</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/2/n11761626.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/wall-416060_1280-150x120.jpg" align ="left"></a>家里装修浴室和厨房期间对谁来说都是很头疼的时期，有的人考虑搬出去住，但是这工作量大开支也大。如果实在要住在家里，看看地产资讯网Domain搜集的几点经验，帮您顺利度过这种“兵荒马乱”的日子。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 10:04 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/2/n11761601.md#1" target="_blank">浴室装修专家给您七大提点</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/2/n11761601.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/home-3593729_1280-150x120.jpg" align ="left"></a>翻新浴室的时候，看着各式各样的新潮花样是不是会挑花了眼，到底哪些是必须的，哪些是奢侈不必要的呢？房地产资讯网Domain收集了多位专家的意见，为读者提供了七个建议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 9:51 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/2/n11761588.md#1" target="_blank">家居格局规划应避免的五大错误</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/2/n11761588.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/living-room-1085987_1280-150x120.jpg" align ="left"></a>设计新家的时候，如何最有效地规划空间的分割？地产资讯网Domain列出了人们常犯的五个错误。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 9:39 AM			</td></tr>
@@ -31,17 +34,5 @@
 拿旧金山房市来说，十一月各种房型的价格都在震荡，没有超高价.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 6:51 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/20/n11736090.md#1" target="_blank">牙周病是身体慢性发炎？为体内灭火可防多种疾病</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/20/n11736090.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/periodontitis_126986645-150x120.jpg" align ="left"></a>牙周病不仅是口腔疾病，也可能意味着身体已经慢性发炎。改善牙周病除了正确刷牙、定期做口腔检查之外，还要灭掉身体的炎症之火。牙周病主要分为两类：牙龈炎与牙周炎。牙龈炎多为牙菌斑过多所致，症状为牙龈发红、肿胀、刷牙流血。牙周炎除了有牙龈炎症状外，会进一步侵犯牙龈下方的齿槽骨和牙周韧带，使牙齿渐渐松动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 2:39 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/27/n11750089.md#1" target="_blank">分享前先想一想 辨别假新闻3招 跳脱同温层</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/27/n11750089.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/10/20171004-nina-Taipei-501-150x120.jpg" align ="left"></a>“眼见为凭”真的靠谱吗？网路讯息越发达，人们越是陷入迷茫而不自知。特别是另有用心的人操弄“讯息”，发动了“战争”，却使人们误以为身处“和平”。我们每个人都有责任分辨并且阻止假讯息散播。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 1:22 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/30/n11754206.md#1" target="_blank">美失窃小狗现身千里外 15人接力开车送回家</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/30/n11754206.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-103200745-150x120.jpg" align ="left"></a>美国蒙大拿州一只小狗被窃贼偷走，并被带到2,000英里（3,219公里）之外的地方。在动物收容所的号召下，15名志工以接力的方式开车送它回家，让它得以在圣诞佳节之前与主人团聚。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 12:50 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/29/n11753470.md#1" target="_blank">2019东湾房市11月份最新数据（上）</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/29/n11753470.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/livermore1-150x120.png" align ="left"></a>11/2019东湾房市，统计销售中位数价格、库存、待售出、售出数量等多个房市数据。
-东湾房市：奥克兰（Oakland）独立房市场销售状况摘要
-· 11月份期间新上市的独立房屋共有212栋。（10月：336）
-· 11月份期间售出的独立住宅共有196栋。（10月：243）
-· 11月份的中间售价高达81万5,00.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 2:11 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/29/n11753449.md#1" target="_blank">加州居民移居拉斯维加斯蔚成趋势</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/29/n11753449.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Nevada-2-150x120.png" align ="left"></a>文：刘大年?拉斯维加斯房地产经纪
-美国人口普查局最新估计，从2017年8月到2018年7月，超过5万名加州居民移居内华达州，这数值是10年来第二峰值。
-
-加州在内华达州的人口增长扮演着重要角色。据估计，在过去的12个月中，10个移居至内华达州的人中就有4个来自加州。
-
-2017与2018两年间，总共约有128.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 1:34 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/lduuv275/djy/blob/master/gb/news2008_3.md#1<br><a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/lduuv275/djy/blob/master/gb/news2008_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2008_3.htm">http://www.epochtimes.com/gb/news2008_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
