--- a/gb/news392_5.md
+++ b/gb/news392_5.md
@@ -18,9 +18,18 @@
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/27/n11749651.md#1" target="_blank">【2019盘点】中共社会监控的极端化</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/27/n11749651.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/04/1204080852102039-150x120.jpg" align ="left"></a>2019，中共是火上烤的一年，被烤得神志不清、惊慌失措、奄奄一息，政局全面恶化；草木皆兵，“向左转”浊浪拍岸，社会控制极端化；当局左支右绌，进退失措，几近丧失决策能力；强化“党领导一切”，刀光剑影之间，内斗呈现新态势，已末路不远。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 10:55 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/27/n11749390.md#1" target="_blank">东方觉：辛苦农民工 讨薪路上难</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/27/n11749390.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/12/1512260414022120-150x120.jpg" align ="left"></a>每每时近岁末，年关将至，中国大陆农民工讨薪难的问题成为公众关注的焦点。一份薪水，背后是一个家庭的生活来源和希望。长期远离家乡的农民工，回家和父母妻儿团聚的念头尤为迫切，农民工的“血汗钱”也牵动了不少人的心。讨薪路漫漫，难于上青天；漫漫讨薪路，几多辛酸泪。农民工的辛苦遭遇和为讨薪付出的沉重代价，令人心痛，也令人心酸。
 .........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 10:44 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/27/n11748707.md#1" target="_blank">王友群：中共的解体可能快速发生？</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/27/n11748707.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/09/1409201624582403-150x120.jpg" align ="left"></a>2019年岁末，中共的解体，正成为一个热门话题。
-12月21日，大纪元新唐人媒体集团在曼哈顿举办“决战2020 时事论坛”，旅美政论家陈破空、美国普林斯顿大学博士程晓农、川普华裔筹款官楼新跃、美国艾德菲大学政治学教授王维正、香港资深银行家吴明德、香港《前哨》杂志总编辑刘达文，美国飞天大学人文与科学副教授章天亮，应邀发.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 5:35 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/27/n11748173.md#1" target="_blank">高天韵：南亚海啸15年 2020灾害预言会否成真</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/27/n11748173.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-51933143-150x120.jpg" align ="left"></a>12月23日，英国《镜报》介绍了已逝的保加利亚盲人预言家巴巴·万加（Baba Vanga）对2020年进行的一些预测，其中提到亚洲在这一年将遭遇更多海啸和地震，前景苍凉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 5:00 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/30/n11754348.md#1" target="_blank">明智：浅评香港连续剧《再向虎山行》</a><br></h3>是中国香港亚洲电视拍摄的一部40集电视连续剧。该剧描述的是，北方武术高手姜铁山擅使“夺命长枪”，威震北方，其女姜文英个性豪爽，亦有好身手。有人前来姜家托镖，因铁山有事，文英与母亲苗玉娘代为护镖，不料途中被劫，玉娘受重伤，文英则被人掳走等一系列江湖恩怨的故事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 1:30 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/30/n11754195.md#1" target="_blank">郑纯清：二零二零年散伙演弃年——新年寄语</a><br></h3>二零二零年，散伙演弃年。
+神韵火朝天，天象愈明显。
+进化论坛塌，无神论场陷。
+唯物论口呆，斗争党自残。
+除魔救善戏，假恶暴伙散。
+百年红潮零，中南海底翻。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 12:26 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/30/n11754159.md#1" target="_blank">千瑞：望中原</a><br></h3>教书不育人，作祟更欺人。课下单开灶，搂钱不做人。
+学习吹强国，人人写心得。三篇四五篇，费尽胡编墨。
+白衣常吃人，验血吃何人。堪比妖魔恶，挥刀可杀人。
+软件逼人装，强行来洗脑。邪灵末日狂，歪理欺辞藻。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 12:13 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/30/n11754077.md#1" target="_blank">东方觉：杀妻骗保为何在中国大陆如此“疯行”</a><br></h3>“金钱至上”，令人疯狂，令人丧失理智，令人人性泯灭，为钱而“杀妻骗保”竟在大陆一路“疯行”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 11:40 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/29/n11753239.md#1" target="_blank">【名家专栏】共同核心标准仍在破坏美国教育</a><br></h3>也许没有什么比“共同核心标准”（Common Core standards）更能使美国人从对政府教育的麻木状态中苏醒过来。所谓的“共同核心标准”是由左翼奥巴马政府悄悄强加给国家的，用税收的钱来“行贿”，并且是强制性的。人民对此愤怒﹐川普（特朗普）称这些标准是“一场彻底的灾难”﹐但愤怒只触及了问题的表面。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 10:26 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/29/n11753177.md#1" target="_blank">杜彼得：圣诞亮点暗去 余烬比伤口漫长</a><br></h3>专栏的作用，很多时候只是供品味足的读者参考，但其重要的分野有职业与业余之分，如果是职业的，为了生存除了要勤于搜集资料之外，文章必须迎合读者与市场的需要，民以食为天，作者不可能全家饿着肚子讲“良知”却饿死在荒郊野地。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 9:11 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/29/n11752359.md#1" target="_blank">金浴凤：末日叹</a><br></h3>旷日贸易战，土共忒心烦
@@ -57,12 +66,5 @@
 坑了韩国瑜
 助力蔡英文......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 2:10 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/27/n11748931.md#1" target="_blank">陆客：在大陆政治学习学出三个更正</a><br></h3>阅前提示：本文是写给一些中国大陆的党员朋友，他们正被中共洗脑的大量政治学习煎熬，交流下保护灵魂的学习思路。因文字采用他们熟悉的腔调，变异的党文化气息较重，正常人看了可能会有不适，特提醒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 8:48 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/27/n11749203.md#1" target="_blank">陆客：末世民风（四）</a><br></h3>一、 香港妖影
-
-没有暴徒党来干
-没有港独党来扮
-坏事做绝背里干
-台上装傻又装蒜......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 7:39 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/21/n11737584.md#1" target="_blank">李旭彤：挖掘五千年文明惊世宝藏（11）</a><br></h3>近代科学的很多数学科都是从两个个体间的相互作用开始的。如牛顿力学第一定律，经济学的供给方与需求方，制度经济学中的规制与被规制等。但是在这些科学中，作用模型都是不同，并未发展出两个个体相互作用的一般模型。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 6:18 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/news392_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news392_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/lduuv275/djy/blob/master/gb/news392_5.md#1<br><a href="https://github.com/lduuv275/djy/blob/master/gb/news392_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/lduuv275/djy/blob/master/gb/news392_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_5.htm">http://www.epochtimes.com/gb/news392_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
